--- a/public/editar.html
+++ b/public/editar.html
@@ -89,6 +89,25 @@
       visibility: visible;
       opacity: 1;
     }
+
+    .range-value-L {
+      display: inline-block;
+      position: relative;
+      line-height: 20px;
+      text-align: center;
+      border-radius: 3px;
+      padding: 5px 10px;
+    }
+    .range-value-L::after {
+      content: "";
+      position: absolute;
+      bottom: 50%;
+      left: -10px;
+      margin-bottom: -5px;
+      border-width: 5px;
+      border-style: solid;
+      border-color: transparent #007bff transparent transparent;
+    }
   </style>
 
 </head>
