--- a/public/contacto.html
+++ b/public/contacto.html
@@ -194,38 +194,10 @@
           </div>
         </div>
         <!--Anuncios V-->
-        <div class="col-2 py-md-3 d-none d-sm-block bg-info sidebar text-dark text-center justify-content-center px-1 px-lg-2">
-          <h5 class="text-center mx-auto">Publicidad</h5>
-          <a href="https://www.instagram.com/p/CDLE_t6nsdU/?igshid=ttb1h94rs65" rel="sponsored"><img class="w-100 mb-2" src="publicidad/CubreMid.jpg" alt="Cubre Mid"></a>
-          <a href="https://www.instagram.com/_pedacitode_cielo/" rel="sponsored"><img class="w-100 mb-2" src="publicidad/PedacitoDeCielo.jpeg" alt="Pedacito de Cielo"></a>
-          <a href="https://www.instagram.com/p/CC_2AELnaMi/?igshid=yp0v3i285a37" rel="sponsored">
-            <img class="w-100" src="publicidad/Lool-Ha1.jpeg" alt="Lool-Ha">
-            <img class="w-100" src="publicidad/Lool-Ha2.jpeg" alt="Lool-Ha">
-            <img class="w-100 mb-2" src="publicidad/Lool-Ha3.jpeg" alt="Lool-Ha">
-          </a>
-          <a href="https://www.google.com/url?sa=t&source=web&rct=j&url=https://www.instagram.com/awesomefundas/&ved=2ahUKEwi7pZiOvfjqAhUD2qwKHSV_ChQQFjAAegQIBhAC&usg=AOvVaw072K32mWOHN9b7u3cEzrcd" rel="sponsored"><img class="w-100 mb-2" src="publicidad/AwesomeFundas.jpg" alt="Awesome Fundas"></a>
-          <a href="https://m.facebook.com/pages/category/Beauty-Supply-Store/mondlermid-100749941724343/" rel="sponsored"><img class="w-100 mb-2" src="publicidad/Mondler.jpeg" alt="Mondler"></a>
-        </div>
+        <div class="col-2 py-md-3 d-none d-sm-block bg-info sidebar text-dark text-center justify-content-center px-1 px-lg-2" id="adsV"></div>
       </div>
       <!--Anuncios H-->
-      <div class="row bg-info px-2 text-dark d-sm-none justify-content-center">
-        <div class="col-12 pt-2">
-          <h5 class="text-center mx-auto">Publicidad</h5>
-        </div>
-        <div class="col-6 px-1">
-          <a href="https://www.instagram.com/p/CDLE_t6nsdU/?igshid=ttb1h94rs65" rel="sponsored"><img class="w-100 mb-2" src="publicidad/CubreMid.jpg" alt="Cubre Mid"></a>
-          <a href="https://www.instagram.com/_pedacitode_cielo/" rel="sponsored"><img class="w-100 mb-2" src="publicidad/PedacitoDeCielo.jpeg" alt="Pedacito de Cielo"></a>
-          <a href="https://www.instagram.com/p/CC_2AELnaMi/?igshid=yp0v3i285a37" rel="sponsored">
-            <img class="w-100" src="publicidad/Lool-Ha1.jpeg" alt="Lool-Ha">
-            <img class="w-100" src="publicidad/Lool-Ha2.jpeg" alt="Lool-Ha">
-            <img class="w-100 mb-2" src="publicidad/Lool-Ha3.jpeg" alt="Lool-Ha">
-          </a>
-        </div>
-        <div class="col-6 px-1">
-          <a href="https://www.google.com/url?sa=t&source=web&rct=j&url=https://www.instagram.com/awesomefundas/&ved=2ahUKEwi7pZiOvfjqAhUD2qwKHSV_ChQQFjAAegQIBhAC&usg=AOvVaw072K32mWOHN9b7u3cEzrcd" rel="sponsored"><img class="w-100 mb-2" src="publicidad/AwesomeFundas.jpg" alt="Awesome Fundas"></a>
-          <a href="https://m.facebook.com/pages/category/Beauty-Supply-Store/mondlermid-100749941724343/" rel="sponsored"><img class="w-100 mb-2" src="publicidad/Mondler.jpeg" alt="Mondler"></a>
-        </div>
-      </div>
+      <div class="row bg-info px-2 text-dark d-sm-none justify-content-center" id="adsH"></div>
     </div>
     
     <!--Bootstrap-->
