--- a/public/404.html
+++ b/public/404.html
@@ -51,7 +51,7 @@
   <body>
 
     <!--Navbar-->
-    <nav class="navbar sticky-top navbar-expand-md navbar-dark" style="background-color: #791acd;">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #791acd;">
       <img src="img/wlogoT.svg" height="30" class="d-inline-block align-center mr-2" alt="Science Cookies Logo" loading="lazy">
       <a class="navbar-brand" href="https://sciencecookies.net">Science Cookies</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarM" aria-controls="navbarM" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -61,6 +61,7 @@
           <a class="btn btn-dark mx-2 my-1" href="quienes-somos">¿Quienes somos?</a>
           <a class="btn btn-dark mx-2 my-1" href="contacto">Contacto</a>
           <a class="btn btn-dark mx-2 my-1" href="archivo">Archivo</a>
+          <a class="btn btn-dark mx-2 my-1" href="calendario-astronomico">Calendario Astronómico</a>
         </ul>
         <div class="row justify-content-end">
           <div class="dropdown mr-4 dropleft">
@@ -69,6 +70,7 @@
               <a id="btnPrfl" class="btn btn-link text-decoration-none text-light d-none" href="perfil">Mi perfíl</a>
               <a id="btnPref" class="btn btn-link text-decoration-none text-light d-none" href="perfil?tab=pref">Preferencias</a>
               <a id="btnDraft" class="btn btn-link text-decoration-none text-light d-none" href="drafts">Borradores</a>
+              <a id="btnCals" class="btn btn-link text-decoration-none text-light d-none" href="calendarios">Calendarios</a>
               <div class="dropdown-divider ml-1 mr-2"></div>
               <button id="btnLgO" class="btn btn-link text-decoration-none text-light d-none">Cerrar sesión</button>
               <button id="btnLgI" class="btn btn-link text-decoration-none text-light d-none" data-toggle="modal" data-target="#mdlRgstr">Acceder</button>
