--- a/public/calendarios.html
+++ b/public/calendarios.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="../../img/logoT.svg">
-    <title>Science Cookies - Ver perfíl</title>
-    
+    <meta name="description" content="Revisa y administra tus borradores"/>
+    <link rel="canonical" href="https://sciencecookies.net/drafts"/>
+    <link rel="shortcut icon" href="img/logoT.svg">
+    <title>Science Cookies - Borradores</title>
+
     <!--Firebase app-->
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
     <!--Firebase features-->
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-storage.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-functions.js"></script>
 
@@ -62,7 +64,7 @@
           <a class="btn btn-dark mx-2 my-1" href="quienes-somos">¿Quienes somos?</a>
           <a class="btn btn-dark mx-2 my-1" href="contacto">Contacto</a>
           <a class="btn btn-dark mx-2 my-1" href="archivo">Archivo</a>
-          <a class="btn btn-dark mx-2 my-1" href="calendario-astronomico">Calendario Astronómico</a>
+          <a class="btn btn-dark mx-2 my-1 active">Calendario Astronómico</a>
         </ul>
         <div class="row justify-content-end">
           <div class="dropdown mr-4 dropleft">
@@ -87,6 +89,9 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="mdlRgsL">Inicia sesión o regístrate</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
           </div>
           <div class="modal-body">
             <div id="firebaseui-auth-container"></div>
@@ -104,7 +109,7 @@
     </div>
     
     <!--Página-->
-    <div class="container-fluid text-white" style="background-color: black;background-image: url('../../img/fondo1.jpg');background-position: center top;background-attachment: fixed;">
+    <div class="container-fluid text-white" style="background-color: black;background-image: url('img/fondo1.jpg');background-position: center top;background-attachment: fixed;">
       <div class="row justify-content-around">
         <div class="col-md-3 col-xl-2 sidebar my-0 ml-lg-3 mr-0 ml-md-2 py-md-1 pl-md-3 text-dark" style="background-color: #FFF8E7;">
           <div class="row">
@@ -122,49 +127,44 @@
           </nav>
         </div>
         <div class="col-12 col-sm-9 col-md-6 col-xl-7 py-md-3 pl-md-3">
-          <p class="text-center"><img class="mt-3 mb-4 w-75" src="../../img/NLogoHalignT.svg" alt="Science Cookies: artículos de ciencia con chispas de chocolate"></p>
-          <!--Aquí va el contenido-->
-          <ul class="nav nav-tabs">
-            <li class="nav-item mx-lg-1 mx-0">
-              <a class="nav-link text-decoration-none btn-outline-light" onclick="shwCrds(1);" id="navBtnPrfl">Su perfíl</a>
-            </li>
-            <li class="nav-item mx-lg-1 mx-0">
-              <a class="nav-link text-decoration-none btn-outline-light" onclick="shwCrds(2);" id="navBtnFav">Sus favoritos</a>
-            </li>
-            <li class="nav-item ml-lg-1 mr-lg-auto mx-0">
-              <a class="nav-link text-decoration-none btn-outline-light" onclick="shwCrds(3);" id="navBtnLike">Sus me gusta</a>
-            </li>
-          </ul>
-          <div class="container-fluid px-2">
-            <div class="card text-light border-light bg-transparent mt-2 d-none" id="crdPrfl">
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item text-light border-light bg-transparent" id="contPic">
-                  <img src="" alt="" class="rounded" height="150" id="disPP">
+          <p class="text-center"><img class="mt-3 mb-4 w-75" src="img/NLogoHalignT.svg" alt="Science Cookies: artículos de ciencia con chispas de chocolate"></p>
+          <div class="container-fluid mb-2 rounded-lg p-3" style="background-color:rebeccapurple;">
+            <!--Aquí va el contenido-->
+            <nav aria-label="pageNavT" class="d-none" id="pgNavT">
+              <ul class="pagination justify-content-end">
+                <li class="page-item">
+                  <button class="page-link text-light bg-transparent" aria-label="pgTPrv" id="pgTPrv">
+                    <span aria-hidden="true">&laquo;</span>
+                  </button>
                 </li>
-                <li class="list-group-item text-light border-light bg-transparent d-none" id="contEmail">
-                  <div class="container"><div class="row">
-                    <div class="col col-4"><strong>Email</strong></div>
-                    <div class="col col-8" id="disMail"></div>
-                  </div></div>
-                </li>
-                <li class="list-group-item text-light border-light bg-transparent">
-                  <div class="container"><div class="row" id="contNull">
-                    <div class="col col-4">
-                      <strong>Nombre</strong>
-                    </div>
-                    <div class="col col-8" id="disName"></div>
-                  </div></div>
+                <li class="page-item"><span class="page-link text-light bg-transparent" id="disPgT">1</span></li>
+                <li class="page-item">
+                  <button class="page-link text-light bg-transparent" aria-label="pgTNxt" id="pgTNxt">
+                    <span aria-hidden="true">&raquo;</span>
+                  </button>
                 </li>
               </ul>
+            </nav>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-1 row-cols-lg-2 row-cols-xl-3" id="crdContainer">
+              <!--Cards-->
             </div>
-            <div class="card text-light border-light bg-transparent mt-2 d-none" id="crdFav">
-              <ul class="list-group list-group-flush" id="cntFav"></ul>
-            </div>
-            <div class="card text-light border-light bg-transparent mt-2 d-none" id="crdLike">
-              <ul class="list-group list-group-flush" id="cntLike"></ul>
-            </div>
+            <nav aria-label="pageNavB" class="d-none" id="pgNavB">
+              <ul class="pagination justify-content-end">
+                <li class="page-item">
+                  <button class="page-link text-light bg-transparent" aria-label="pgBPrv" id="pgBPrv">
+                    <span aria-hidden="true">&laquo;</span>
+                  </button>
+                </li>
+                <li class="page-item"><span class="page-link text-light bg-transparent" id="disPgB">1</span></li>
+                <li class="page-item">
+                  <button class="page-link text-light bg-transparent" aria-label="pgBNxt" id="pgBNxt">
+                    <span aria-hidden="true">&raquo;</span>
+                  </button>
+                </li>
+              </ul>
+            </nav>
+            <!--Aquí termina el contenido-->
           </div>
-          <!--Aquí termina el contenido-->
         </div>
         <!--Anuncios V-->
         <div class="col-2 py-md-3 d-none d-sm-block bg-info sidebar text-dark text-center justify-content-center px-1 px-lg-2" id="adsV"></div>
@@ -179,7 +179,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
     <script src="js/global.js"></script>
-    <script src="js/viewPrflApp.js"></script>
+    <script src="js/calendars.js"></script>
 
     <!--AddThis-->
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f13599e10bd5c2b"></script>
