--- a/public/calendarios.html
+++ b/public/calendarios.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Revisa y administra tus borradores"/>
-    <link rel="canonical" href="https://sciencecookies.net/drafts"/>
+    <meta name="description" content="Revisa y edita los calendarios"/>
+    <link rel="canonical" href="https://sciencecookies.net/calendarios"/>
     <link rel="shortcut icon" href="img/logoT.svg">
-    <title>Science Cookies - Borradores</title>
+    <title>Science Cookies - Calendarios</title>
 
     <!--Firebase app-->
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
