--- a/public/editar.html
+++ b/public/editar.html
@@ -135,6 +135,7 @@
         <a class="btn btn-dark mx-2 my-1" href="contacto">Contacto</a>
         <a class="btn btn-dark mx-2 my-1" href="archivo">Archivo</a>
         <a class="btn btn-dark mx-2 my-1" href="calendario-astronomico">Calendario Astronómico</a>
+        <i id="tagLstSave" class="text-light mx-3 my-auto"></i>
       </ul>
       <div class="row justify-content-end">
         <div class="dropdown mr-4 dropleft">
