--- a/public/editar-calendario.html
+++ b/public/editar-calendario.html
@@ -75,7 +75,6 @@
 
     .autoOverflow:hover {
       overflow: auto;
-      margin-right: 0rem;
     }
   </style>
 
@@ -148,7 +147,7 @@
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="mdlPublishL">Hacer público el calendario</h5>
+          <h5 class="modal-title" id="mdlPublishL">Publicar el calendario</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="btnCanPublish1"><span
               aria-hidden="true">&times;</span></button>
         </div>
@@ -179,11 +178,11 @@
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
               aria-hidden="true">&times;</span></button>
         </div>
-        <div class="modal-body">
+        <div class="row px-4 py-2">
+          <button class="btn btn-scckie mr-auto" id="btnPriorEve"><i class="fas fa-arrow-left"></i></button>
+          <button class="btn btn-scckie" id="btnNextEve"><i class="fas fa-arrow-right"></i></button>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary btn-block" data-dismiss="modal">Cerrar</button>
-        </div>
+        <div id="eventInfoCont" class="overflow-auto"></div>
       </div>
     </div>
   </div>
@@ -200,7 +199,7 @@
     <div class="btn-group-vertical mr-2 btn-group-lg" role="group">
       <button class="btn btn-scckie" id="btnPrevCal"><i class="fas fa-eye"></i></button>
       <button class="btn btn-scckie" id="btnPrevMail"><i class="fas fa-envelope"></i></button>
-      <button class="btn btn-scckie" id="btnAprove"><i class="far fa-check-square"></i></button>
+      <button class="btn btn-scckie d-none" id="btnAprove"><i class="far fa-check-square"></i></button>
       <button class="btn btn-scckie d-none" id="btnPub" data-toggle="modal" data-target="#mdlPublish"><i
           class="fas fa-paper-plane"></i></button>
     </div>
