--- a/public/editar.html
+++ b/public/editar.html
@@ -395,7 +395,7 @@
       <button class="btn btn-scckie" data-toggle="modal" data-target="#mdlPlusSect"
         onclick="toAdd=docDat.cont.length-1;"><i class="fas fa-plus"></i></button>
       <button class="btn btn-scckie" data-toggle="modal" data-target="#mdlMedMan"><i class="fas fa-image"></i></button>
-      <button class="btn btn-scckie d-none" id="btnPrevCook"><i class="fas fa-eye"></i></button>
+      <button class="btn btn-scckie" id="btnPrevCook"><i class="fas fa-eye"></i></button>
       <button class="btn btn-scckie" id="btnPrevMail"><i class="fas fa-envelope"></i></button>
       <button class="btn btn-scckie d-none" id="btnPrivate"><i class="fas fa-lock"></i></button>
       <button class="btn btn-scckie d-none" id="btnAprove"><i class="far fa-check-square"></i></button>
