Show cal to users

--- a/public/404.html
+++ b/public/404.html
@@ -124,6 +124,10 @@
           </div>
           <nav class="collapse sdbarCnt" id="sdbarL">
             <div class="col justify-content-center px-3 px-md-0 px-lg-3 px-xl-2">
+              <div class="d-none" id="calRecom">
+                <h5 class="text-center">Calendario astronómico</h5>
+                <div id="calCnt"></div>
+              </div>
               <h5 class="text-center">La galleta más nueva</h5>
               <div id="newCook"></div>
               <div class="dropdown-divider d-md-none"></div>
