--- a/public/index.html
+++ b/public/index.html
@@ -131,6 +131,10 @@
           </div>
           <nav class="collapse sdbarCnt" id="sdbarL">
             <div class="col justify-content-center px-3 px-md-0 px-lg-3 px-xl-2">
+              <div class="d-none" id="calRecom">
+                <h5 class="text-center">Calendario astronómico</h5>
+                <div id="calCnt"></div>
+              </div>
               <h5 class="text-center">La galleta más nueva</h5>
               <div id="newCook"></div>
               <div class="dropdown-divider d-md-none"></div>
@@ -141,6 +145,7 @@
         </div>
         <div class="col-12 col-sm-9 col-md-6 col-xl-7 py-md-3 pl-md-3" id="cookCnt">
           <p class="text-center"><img class="mt-3 mb-4 w-75" src="img/NLogoHalignT.svg" alt="Science Cookies: artículos de ciencia con chispas de chocolate"></p>
+          <div class="container-fluid mb-4 rounded-lg p-3 d-none" style="background-color:rebeccapurple;" id="calMain"></div>
           <form class="mb-4" id="frmSrch">
             <div style="border:solid;border-width:1px;color:#f8f9fa;border-color:#f8f9fa;" class="rounded mb-1 pl-2 pt-1">
               <div class="from-row">
