--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,15 @@
           </nav>
         </div>
         <div class="col-12 col-sm-9 col-md-6 col-xl-7 py-md-3 pl-md-3" id="cookCnt">
-          <p class="text-center"><img class="mt-3 mb-4 w-75" src="img/NLogoHalignT.svg" alt="Science Cookies: artículos de ciencia con chispas de chocolate"></p>
+          <div class="row justify-content-center mt-3 mb-4 align-items-center">
+            <div class="col-10 col-sm-5 col-xl-3">
+              <img src="img/logoT.svg" class="w-100" alt="Science Cookies Logo" loading="lazy">
+            </div>
+            <div class="col-12 col-sm-6 col-xl-4">
+              <h1 style="font-size: 2.8rem;" class="text-center">SCIENCE COOKIES</h1>
+              <h2 style="font-size: 1rem;" class="text-center">Artículos de ciencia con chispas de chocolate</h2>
+            </div>
+          </div>
           <div class="container-fluid mb-4 rounded-lg p-3 d-none" style="background-color:rebeccapurple;" id="calMain"></div>
           <form class="mb-4" id="frmSrch">
             <div style="border:solid;border-width:1px;color:#f8f9fa;border-color:#f8f9fa;" class="rounded mb-1 pl-2 pt-1">
