--- a/public/editar-calendario.html
+++ b/public/editar-calendario.html
@@ -201,8 +201,8 @@
       <button class="btn btn-scckie" id="btnPrevCal"><i class="fas fa-eye"></i></button>
       <button class="btn btn-scckie" id="btnPrevMail"><i class="fas fa-envelope"></i></button>
       <button class="btn btn-scckie d-none" id="btnAprove"><i class="far fa-check-square"></i></button>
-      <button class="btn btn-scckie d-none" id="btnPub" data-toggle="modal" data-target="#mdlPublish"><i
-          class="fas fa-paper-plane"></i></button>
+      <button class="btn btn-scckie d-none" id="btnPub" data-toggle="modal" data-target="#mdlPublish"><i class="fas fa-paper-plane"></i></button>
+      <a class="btn btn-scckie text-decoration-none" id="btnSrcCal"><i class="fas fa-calendar-day"></i></a>
     </div>
   </div>
 
